"1.3 QA [Player - iOS] UI - Cancel button is overlapped in collection home page fixed"

--- a/src/main/java/org/ednovo/gooru/client/mvp/play/collection/header/collectionHeader.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/collection/header/collectionHeader.css
@@ -142,6 +142,7 @@
 	float: right;
 	line-height: 12px;
 	margin-right: 35px;
+	position: relative;
 	padding: 7px 15px;
 	color: #ffffff;
 }
